--- a/src/pages/Product.css
+++ b/src/pages/Product.css
@@ -154,8 +154,8 @@
 
 .how-to.button {
   display: inline-block;
-  padding: 0.5rem 3rem;
-  font-size: 1.2rem;
+  padding: 0.3rem 1.5rem;
+  font-size: .9rem;
   cursor: pointer;
   margin-top: 2rem;
 }
@@ -266,4 +266,32 @@
   color: #d0d0d0;
   line-height: 1.6;
   margin-bottom: 0.8rem;
+}
+
+.sizes-container {
+  display: flex;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.size.button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  background: white;
+  margin: 0 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+.size-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 10px 0;
 }
